--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
+#서버 포트 설정
 server.port=8080
+
+#thymeleft 설정
 spring.thymeleaf.prefix=classpath:templates/
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.suffix=.html
@@ -6,3 +9,16 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.cache=false
 spring.thymeleaf.order=0
 
+# jpa
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# oracle 연결
+spring.datasource.url=jdbc:oracle:thin:@db202104081348_medium?TNS_ADMIN=D:/Wallet_DB202104081348
+spring.datasource.username=ADMIN
+spring.datasource.password=Qhdksrltnf2!
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+
+# hikari 설정
+#spring.datasource.hikari.connection-timeout=60000
+#spring.datasource.hikari.maximum-pool-size=5
