--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #서버 포트 설정
 server.port=8080
 
-#thymeleft 설정
+#thymeleaf 설정
 spring.thymeleaf.prefix=classpath:templates/
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.suffix=.html
